fabric/testdata/out/ing_spp-product-search-pre-prod-get-api-product-queries-wildcard-rl-users-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-product-search-pre-prod-master-299\":0.0,\"spp-product-search-pre-prod-master-301\":100.0}","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e clusterClientRatelimit(\"spp-product-search-pre-prod_api-product-queries-wildcard_GET_users\",
      100, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/product-queries/**\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"7ac92c28-f589-48e8-98fe-454926fa0c25","deployment-id":"d-79xdtzozq679c8g5yc41iz923","pipeline-id":"l-kegu7kiv13mu2pr57d32arxh5"},"name":"spp-product-search-pre-prod-get-api-product-queries-wildcard-rl-users-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-pre-prod.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-pre-prod-master-299","servicePort [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-product-search-pre-prod-master-299":0.0,"spp-product-search-pre-prod-master-301":100.0}'
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> clusterClientRatelimit("spp-product-search-pre-prod_api-product-queries-wildcard_GET_users",
      100, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/product-queries/**") &&
      Method("GET") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-02-10T14:48:52Z"
  generation: 26
  labels:
    controller-uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
    deployment-id: d-79xdtzozq679c8g5yc41iz923
    pipeline-id: l-kegu7kiv13mu2pr57d32arxh5
  name: spp-product-search-pre-prod-get-api-product-queries-wildcard-rl-users-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-pre-prod
    uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
  resourceVersion: "1357489984"
  uid: 137b7dd6-3591-4ace-81f0-88ce2bdffca6
spec:
  rules:
  - host: spp-product-search-pre-prod.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-pre-prod-master-299
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-search-pre-prod-master-301
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
